fix: Adds explicit methods to routes
As per request from reviewer, adds explicit GET
request to most routes, and changes DELETE method
to POST method for item deletion

--- a/templates/item.html
+++ b/templates/item.html
@@ -65,7 +65,7 @@
           deleteLink.addEventListener('click', event => {
             event.preventDefault()
             fetch(deleteLink.dataset['url'], {
-              method: 'DELETE',
+              method: 'POST',
             })
               .then(res => res.json())
               .then(res => {
