fix: Fixes API calls and json responses
* Fixes toaster to be used with flash
* Adds helper function for use with toaster and flash
* Adds flash notifications for none checks

--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,9 @@ body {
   overflow-x: hidden;
   background-color: #eaead2;
 }
+.hidden {
+  display: none;
+}
 .navbar {
   align-items: center;
   background-color: #bbb;
@@ -55,4 +58,39 @@ body {
   top: 15px;
   position: relative;
   font-size: 0.9em;
+}
+
+/* Toaster */
+.toaster {
+  align-items: center;
+  background-color: #DCECF6D0;
+  border-radius: 5px;
+  border: 2px solid #D7ECF5D0;
+  color: #2D6183;
+  display: flex;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 2em;
+  justify-content: center;
+  pointer-events: none;
+  position: fixed;
+  text-align: center;
+  z-index: 10;
+}
+.warning {
+  background-color: #F5D7D7D0;
+  border: 2px solid #F5D7D7D0;
+  color: #C24343;
+}
+.toaster-offscreen {
+  top: 100vh;
+}
+.slidein {
+  animation-delay: 0s;
+  animation-duration: 300ms; /* TODO: need SASS for SSOT */
+  animation-name: slidein;
+}
+.slideout {
+  animation-delay: 0s;
+  animation-duration: 1s; /* TODO: need SASS for SSOT */
+  animation-name: slideout;
 }
