--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,19 +1,16 @@
 <div class="navbar">
-  <script>
-    const sessionUser = JSON.parse('{{session_user|tojson}}' || {
-      'gplus_id': null,
-      'picture': null,
-      'token': null,
-    })
-    document.addEventListener('DOMContentLoaded', () => {
-      const container = document.querySelector('.google-image-container')
-      // If no container then user is logged out
-      if(container) {
-        container.querySelector('.google-image').src = sessionUser.picture
-        container.querySelector('.tooltip').innerText = sessionUser.token
-      }
-    })
-  </script>
+  {% with messages = get_flashed_messages() %}
+    <script>
+      // Add to window object to absolutely ensure variables are global
+      window.flashMessages = JSON.parse('{{ messages|tojson }}')
+      window.sessionUserData = JSON.parse('{{ session_user|tojson }}')
+    </script>
+  {% endwith %}
+  <script src="/static/toaster.js" type="module"></script>
+  <script src="/static/navbar.js" type="module"></script>
+  <div class="toaster hidden toaster-offscreen">
+    <p></p>
+  </div>
   <a class="navbar-link" href="/">Catalog</a>
   <div class="right">
     {% if 'token' not in session_user %}
