fix: Centers text for smaller screens

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -27,6 +27,7 @@
         text-align: center;
       }
       .main-left {
+        text-align: center;
         justify-self: flex-start;
         flex: 1 1 45vw;
       }
