chore: Cleans up logs
* Move code using useful console logs to module
  and swaps out console log for toaster message
* Removes unneccesary console logs

--- a/templates/listing.html
+++ b/templates/listing.html
@@ -38,27 +38,6 @@
         {% endif %}
       </div>
     {% endfor %}
-    <script>
-      for (const deleteLink of document.querySelectorAll('.delete-btn')) {
-        deleteLink.addEventListener('click', event => {
-          event.preventDefault()
-          fetch(deleteLink.dataset['url'], {
-            method: 'DELETE',
-          })
-            .then(res => res.json())
-            .then(res => {
-              if(res.response && res.response === 'success') {
-                const container = deleteLink.parentElement.parentElement
-                container.parentElement.removeChild(container)
-              } else {
-                toaster.pushMessage({type: 'error', payload: {
-                  error: JSON.stringify(res,0,2),
-                  interrupt: true,
-                }})
-              }
-            })
-        })
-      }
-    </script>
+    <script src="/static/listing.js" type="module"></script>
   </body>
 </html>
