fix: Fixes logout
* Hides controls while logging out to prevent
  `broken pipe` errors if user clicks save or
  edit after signing out but before async cb

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@ body {
   background-color: #eaead2;
 }
 .hidden {
-  display: none;
+  display: none !important;
 }
 .navbar {
   align-items: center;
